<resources>
    <string name="app_name">InstaOunce</string>
    <string name="username_text_prompt">username</string>
    <string name="password_text_prompt">password</string>
    <string name="login_button_text">LOG IN</string>

    <string name="back4app_server_url">https://parseapi.back4app.com</string>
    <string name="back4app_app_id">WMoaIeVL6GLL0L7aZSTqjBIVlPSCuoBsuEn9XJVD</string>
    <string name="back4app_client_key">aAMo0IadU6X3wpmz4TInzc44VQCpTmUQ170p7YRp</string>
    <string name="description_text_prompt">Description...</string>
    <string name="post_button_prompt">Submit</string>
    <string name="register_button_text">SIGN UP</string>
    <string name="logout_button_text">Log Off</string>
    <string name="text_action_bar_home">Home</string>
    <string name="text_action_bar_compose">New Post</string>
    <string name="text_action_bar_profile">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>