<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_bar_home"
        android:enabled="true"
        android:icon="@drawable/instagram_home_selectable"
        android:title="@string/text_action_bar_home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_bar_compose"
        android:enabled="true"
        android:icon="@drawable/instagram_compose_selectable"
        android:title="@string/text_action_bar_compose"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_bar_profile"
        android:enabled="true"
        android:icon="@drawable/instagram_user_selectable"
        android:title="@string/text_action_bar_profile"
        app:showAsAction="ifRoom"
        />

</menu>